--- a/views/visit.erb
+++ b/views/visit.erb
@@ -24,8 +24,8 @@
   </div>
    
   <div class="form-group" >
-    <label>Comments</label>
-    <input name="comments" type="text" class="form-control" placeholder="enter comment" value="<%= @comments %>">
+    <label>Date</label>
+    <input name="date" type="text" class="form-control" placeholder="enter date" value="<%= @dates %>">
   </div>
 
   <div class="form-group">
