--- a/views/layout.erb
+++ b/views/layout.erb
@@ -13,6 +13,11 @@
 		<!-- colorpicker -->
    		<script src="jquery.simplecolorpicker.js"></script>
 		<link rel="stylesheet" href="jquery.simplecolorpicker.css">
+		<!-- datetimepicker -->
+		<script src="jquery.datetimepicker.js"></script>
+		<script src="jquery.datetimepicker.full.min.js"></script>
+		<link rel="stylesheet" href="jquery.datetimepicker.css">
+
 
 		<!-- javascript test -->
    		<!-- <script type="text/javascript" src="/scripts.js"></script> -->
