--- a/views/visit.erb
+++ b/views/visit.erb
@@ -34,7 +34,7 @@
   <label>Choose your barber:</label>  
     <select name="barber"class="form-control" id="test-id-1" value="<%= @barber %>"> 
       <option> </option>                                        <!-- id -->
-      <option <%= @barber == 'Vasya' ? 'selected' : '' %>>Vasya</option>
+      <option <%= @barber == 'Vasya' ? 'selected' : '' %>>Vasya</option>   <!-- selected - shows this position in broswer as default -->
       <option <%= @barber == 'Roman' ? 'selected' : '' %>>Roman</option>
     </select>
   </div>  
