--- a/views/list.erb
+++ b/views/list.erb
@@ -18,7 +18,7 @@
 				<td><%= var['number'] %></td>
 				<td><%= var['date'] %></td>
 				<td><%= var['barber'] %></td>
-				<td><%= var['color'] %></td>
+				<td style="background-color: <%= var['color'] %>" > <%= var['color'] %> </td>
 			</tr>
 			<% end %>
 		</tbody>
